fix: -changed the spacing of the img potfolio added padding to the left

--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ section.portfolio .img-end {
   flex-direction: column;
   align-items: flex-start;
   margin-top: 20px;
+  padding-left: 80px;
 }
 
 section.portfolio .text-description {
